# Checkers

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: default_settings.txt
engine/: AI.cpp  AI.h  board.cpp  board.h  subStructs.h
interface/: EndOfGameWindow.cpp  EndOfGameWindow.h  config.cpp  config.h  elements.cpp  elements.h  exitWindow.cpp  exitWindow.h  game.h  gameExitWindow.cpp  gameExitWindow.h  game_design.cpp  game_design.h  header.h  menu.cpp  menu.h  settings.cpp  settings.h
